--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     .modal{ width:min(520px, 100%); background:#fff; border-radius:14px; padding:15px; }
     
     .staff-tag { background:var(--bank-blue); color:white; font-size:9px; padding:2px 5px; border-radius:4px; margin-bottom:4px; display:inline-block; font-weight:bold; }
+    .source-tag { background:#e2e8f0; color:#475569; font-size:9px; padding:2px 5px; border-radius:4px; margin-bottom:4px; display:inline-block; font-weight:bold; margin-left:5px; }
     .summary-box { background:#e1f5fe; border:1px solid #3498db; border-radius:10px; padding:10px; margin-bottom:10px; display:none; }
     .toast{ position:fixed; left:50%; transform:translateX(-50%); bottom:165px; background:#111; color:#fff; padding:10px 12px; border-radius:12px; font-size:12px; display:none; z-index:3000; }
   </style>
@@ -58,6 +59,14 @@
         <input type="date" id="globalDate" class="input-box" style="flex:1" />
         <select id="assignQuick" class="input-box" style="flex:1"></select>
       </div>
+      <div style="display:flex; gap:6px;">
+          <select id="sourceQuick" class="input-box" style="flex:1">
+              <option value="Whatsapp">Whatsapp</option>
+              <option value="Email">Email</option>
+              <option value="Physical Branch Visit">Physical Visit</option>
+          </select>
+          <input type="time" id="timeQuick" class="input-box" style="flex:1" />
+      </div>
       <input type="text" id="manualTitle" class="input-box" placeholder="Customer Name" />
       <div style="display:flex; gap:6px;">
         <button class="btn-add" onclick="addManualTask()">+ QUICK ADD</button>
@@ -69,7 +78,7 @@
       <input id="searchBox" class="input-box" placeholder="Search..." oninput="renderTasks()" />
       <div style="display:flex; gap:6px;">
         <button class="btn-ghost" style="font-size:11px;" onclick="toggleSummary()">📊 TEAM SUMMARY</button>
-        <button class="btn-ghost" style="font-size:11px;" onclick="emailMasterReport()">📧 MASTER REPORT (DATEWISE)</button>
+        <button class="btn-ghost" style="font-size:11px;" onclick="emailMasterReport()">📧 MASTER REPORT (EMAIL)</button>
       </div>
       <div id="dailySummary" class="summary-box"></div>
     </div>
@@ -80,6 +89,11 @@
   <div id="parsePage" class="page">
     <div class="card" id="parserInputArea">
       <select id="assignBulk" class="input-box"></select>
+      <select id="sourceBulk" class="input-box">
+          <option value="Whatsapp">Whatsapp</option>
+          <option value="Email">Email</option>
+          <option value="Physical Branch Visit">Physical Visit</option>
+      </select>
       <textarea id="rawInput" class="input-box" style="height:110px;" placeholder="ID Acc Name Phone Remarks / Next record..."></textarea>
       <button class="btn-add" onclick="bulkOrSingleParse()">PROCESS ( / )</button>
     </div>
@@ -88,6 +102,14 @@
       <h3>Edit Details</h3>
       <input type="hidden" id="editTaskId" />
       <select id="editAssignee" class="input-box"></select>
+      <div style="display:flex; gap:6px;">
+          <select id="editSource" class="input-box" style="flex:1">
+              <option value="Whatsapp">Whatsapp</option>
+              <option value="Email">Email</option>
+              <option value="Physical Branch Visit">Physical Visit</option>
+          </select>
+          <input type="time" id="editTime" class="input-box" style="flex:1" />
+      </div>
       <div style="display:flex; gap:6px;">
         <input type="text" id="editCustId" class="input-box" placeholder="ID" />
         <input type="text" id="editAcc" class="input-box" placeholder="Acc No" />
@@ -150,18 +172,18 @@
   <div id="toast" class="toast"></div>
 
 <script>
-  let db = JSON.parse(localStorage.getItem('bank_pro_v2026')) || [];
-  let staff = JSON.parse(localStorage.getItem('bank_staff_v2026')) || [];
+  let db = JSON.parse(localStorage.getItem('bank_pro_v34_db')) || [];
+  let staff = JSON.parse(localStorage.getItem('bank_pro_v34_staff')) || [];
 
   function save(){
-    localStorage.setItem('bank_pro_v2026', JSON.stringify(db));
-    localStorage.setItem('bank_staff_v2026', JSON.stringify(staff));
+    localStorage.setItem('bank_pro_v34_db', JSON.stringify(db));
+    localStorage.setItem('bank_pro_v34_staff', JSON.stringify(staff));
     updateStaffDropdowns();
     renderTasks();
     renderStaffList();
   }
 
-  // ========= YOUR ORIGINAL PARSER LOGIC (RESTORED) =========
+  // ========= YOUR ORIGINAL PARSER LOGIC (UNCHANGED) =========
   function parseLogic(text){
     const w = text.trim().split(/\s+/);
     const id = w[0] || ""; const acc = w[1] || "";
@@ -176,7 +198,9 @@
   }
 
   function init(){
-    document.getElementById('globalDate').value = new Date().toISOString().slice(0,10);
+    const now = new Date();
+    document.getElementById('globalDate').value = now.toISOString().slice(0,10);
+    document.getElementById('timeQuick').value = now.toTimeString().slice(0,5);
     save();
   }
 
@@ -187,7 +211,7 @@
     el.classList.add('active');
   }
 
-  // STAFF MASTER
+  // STAFF
   function addStaff(){
     const n = document.getElementById('newStaffName').value.trim();
     if(n){ staff.push(n); document.getElementById('newStaffName').value=''; save(); }
@@ -209,10 +233,12 @@
   // TASK OPERATIONS
   function addManualTask(){
     const d = document.getElementById('globalDate').value;
+    const t = document.getElementById('timeQuick').value;
+    const src = document.getElementById('sourceQuick').value;
     const n = document.getElementById('manualTitle').value.trim();
     const e = document.getElementById('assignQuick').value;
     if(!n) return;
-    db.push({ uid: Date.now().toString(), date: d, n, id:"M", acc:"M", ph:"", rem:"", status:"pending", emp:e });
+    db.push({ uid: Date.now().toString(), date: d, time: t, source: src, n, id:"M", acc:"M", ph:"", rem:"", status:"pending", emp:e });
     document.getElementById('manualTitle').value = ""; save();
   }
 
@@ -220,10 +246,12 @@
     const r = document.getElementById('rawInput').value.trim();
     const d = document.getElementById('globalDate').value;
     const e = document.getElementById('assignBulk').value;
+    const src = document.getElementById('sourceBulk').value;
+    const nowTime = new Date().toTimeString().slice(0,5);
     if(!r) return;
     r.split('/').forEach(line => {
       const p = parseLogic(line);
-      if(p.n) db.push({ uid: Math.random().toString(36).substr(2,9), date: d, ...p, status:"pending", emp:e });
+      if(p.n) db.push({ uid: Math.random().toString(36).substr(2,9), date: d, time: nowTime, source: src, ...p, status:"pending", emp:e });
     });
     document.getElementById('rawInput').value = ""; save(); switchPage('taskPage', document.querySelectorAll('.nav-item')[0]);
   }
@@ -253,7 +281,10 @@
         <div class="group-body">
           ${tasks.map(t => `
             <div class="task-item status-${t.status}">
-              ${t.emp ? `<div class="staff-tag">👤 ${t.emp}</div>` : ''}
+              <div style="margin-bottom:5px;">
+                ${t.emp ? `<div class="staff-tag">👤 ${t.emp}</div>` : ''}
+                ${t.source ? `<div class="source-tag">📩 ${t.source} (${t.time || 'N/A'})</div>` : ''}
+              </div>
               <div class="task-name">${escapeHtml(t.n)}</div>
               <div class="task-meta">ID: ${t.id} | A/c: ${t.acc} | Ph: ${t.ph}</div>
               ${t.rem ? `<div class="rem-text">${escapeHtml(t.rem)}</div>` : ''}
@@ -269,7 +300,7 @@
     });
   }
 
-  // CALENDAR MOVE
+  // MOVE LOGIC
   function openMove(uid){
     const t = db.find(x => x.uid == uid);
     document.getElementById('moveUid').value = uid;
@@ -284,19 +315,26 @@
     save(); closeModal('moveModal'); showToast("Moved");
   }
 
-  // MASTER DATE-WISE EMAIL
+  // MASTER EMAIL
   function emailMasterReport(){
+    if (db.length === 0) return alert("No data.");
+    const selectedDate = document.getElementById('globalDate').value;
+    const single = confirm(`OK: Only ${selectedDate}\nCANCEL: Full Backup`);
+    const data = single ? db.filter(t => t.date === selectedDate) : db;
+    if(data.length === 0) return alert("No tasks.");
+
     const grouped = {};
-    db.forEach(t => (grouped[t.date] ||= []).push(t));
+    data.forEach(t => (grouped[t.date] ||= []).push(t));
     const dates = Object.keys(grouped).sort().reverse();
-    let body = `--- BRANCH MASTER DATA (DATE-WISE) ---\n\n`;
+
+    let body = `--- ${single ? 'DAILY' : 'FULL'} BRANCH REPORT ---\n\n`;
     dates.forEach(d => {
       body += `DATE: ${d}\n----------------\n`;
       grouped[d].forEach((t, i) => {
-        body += `${i+1}. [${t.status.toUpperCase()}] ${t.n}\n   STAFF: ${t.emp || 'Unassigned'} | ID: ${t.id} | Acc: ${t.acc}\n   Ph: ${t.ph} | Rem: ${t.rem || 'Nil'}\n\n`;
+        body += `${i+1}. [${t.status.toUpperCase()}] ${t.n}\n STAFF: ${t.emp || 'Unassigned'} | SOURCE: ${t.source || 'N/A'} (${t.time || 'N/A'})\n ID: ${t.id} | Acc: ${t.acc} | Ph: ${t.ph}\n Rem: ${t.rem || 'Nil'}\n\n`;
       });
     });
-    window.location.href = `mailto:?subject=Branch Data Backup&body=${encodeURIComponent(body)}`;
+    window.location.href = `mailto:?subject=Branch Data&body=${encodeURIComponent(body)}`;
   }
 
   function toggleSummary(){
@@ -315,7 +353,7 @@
   function copyStaff(n, d){
     const ts = db.filter(t => t.date === d && (t.emp || 'Unassigned') === n);
     let m = `*STATUS: ${n} (${d})*\n\n`;
-    ts.forEach((t,i) => m += `${i+1}. ${t.n} (Acc: ${t.acc}) - ${t.status.toUpperCase()}\n`);
+    ts.forEach((t,i) => m += `${i+1}. ${t.n} (Acc: ${t.acc}) - ${t.status.toUpperCase()} [via ${t.source}]\n`);
     navigator.clipboard.writeText(m).then(() => showToast("Copied"));
   }
 
@@ -333,6 +371,8 @@
     document.getElementById('editAcc').value = t.acc; document.getElementById('editPhone').value = t.ph;
     document.getElementById('editStatus').value = t.status; document.getElementById('editRemarks').value = t.rem;
     document.getElementById('editAssignee').value = t.emp || "";
+    document.getElementById('editSource').value = t.source || "Whatsapp";
+    document.getElementById('editTime').value = t.time || "";
     document.getElementById('parserInputArea').style.display='none'; document.getElementById('editArea').style.display='block';
     switchPage('parsePage', document.querySelectorAll('.nav-item')[1]);
   }
@@ -342,12 +382,14 @@
     t.acc = document.getElementById('editAcc').value; t.ph = document.getElementById('editPhone').value;
     t.status = document.getElementById('editStatus').value; t.rem = document.getElementById('editRemarks').value;
     t.emp = document.getElementById('editAssignee').value;
+    t.source = document.getElementById('editSource').value;
+    t.time = document.getElementById('editTime').value;
     save(); cancelEdit(); switchPage('taskPage', document.querySelectorAll('.nav-item')[0]);
   }
   function cancelEdit(){ document.getElementById('parserInputArea').style.display='block'; document.getElementById('editArea').style.display='none'; }
   function deleteTask(u){ if(confirm('Delete?')){ db = db.filter(t => t.uid != u); save(); } }
   function downloadBackup(){ const blob = new Blob([JSON.stringify(db)], {type:'application/json'}); const a = document.createElement('a'); a.href = URL.createObjectURL(blob); a.download = 'backup.json'; a.click(); }
-  function restoreBackup(){ try { db = JSON.parse(document.getElementById('restoreBox').value); save(); closeModal('backupModal'); } catch(e){ alert("Error"); } }
+  function restoreBackup(){ try { db = JSON.parse(document.getElementById('restoreBox').value); save(); closeModal('backupModal'); showToast("Restored"); } catch(e){ alert("Error"); } }
   function clearAll(){ if(confirm("Clear?")){ db=[]; save(); closeModal('backupModal'); } }
 
   window.onload = init;
